<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background1"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="13pt"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/balok"
        android:background="@color/orange"
        android:layout_marginBottom="10dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_margin="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/balok"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Balok adalah bangun ruang tiga dimensi yang dibentuk oleh tiga
        pasang persegi atau persegi panjang,dengan paling tidak satu
        pasang di antaranya berukuran berbeda."/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="13pt"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="Luas Permukaan Balok"
        android:background="@color/purple_200"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/panjang"
            android:textStyle="bold"
            android:textSize="10pt"
            android:background="@color/purple_200" />
        <EditText
            android:id="@+id/edit_panjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="10pt"
            android:background="@color/orange"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp" >

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/lebar"
            android:textStyle="bold"
            android:textSize="10pt"
            android:background="@color/purple_200" />
        <EditText
            android:id="@+id/edit_lebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="10pt"
            android:background="@color/orange"/>

    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="5dp" >

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/tinggi"
        android:textStyle="bold"
        android:textSize="10pt"
        android:background="@color/purple_200" />
    <EditText
        android:id="@+id/edit_tinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textSize="10pt"
        android:background="@color/orange"/>

</LinearLayout>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:text="@string/hitung"
        android:layout_marginBottom="5dp"
        android:background="@drawable/backgroundbutton1"/>
    <TextView
        android:id="@+id/Text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="10pt"
        android:text="@string/result"/>

</LinearLayout>